--- a/src/styles/components/Footer.css
+++ b/src/styles/components/Footer.css
@@ -3,6 +3,7 @@ footer {
   max-width: 32rem;
   margin: 0 auto;
   display: flex;
+  padding: 15px;
   flex-direction: column;
 }
 .section--icons {
