--- a/src/styles/components/Main.css
+++ b/src/styles/components/Main.css
@@ -1,3 +1,6 @@
 .main__container {
-  padding: 15px;
+  padding: 15px 15px 0 15px;
+  display: grid;
+  grid-gap: 2rem;
+  grid-template-columns: repeat(4, 1fr);
 }
