--- a/src/styles/components/ListMap.css
+++ b/src/styles/components/ListMap.css
@@ -1,18 +1,19 @@
 .container__listMap {
   width: 23.3rem;
-  height: 28.7rem;
   display: block;
   background-color: #2b3743;
   margin-bottom: 3rem;
 }
-.listMap__img {
-  background-color: green;
+.listMap__img img {
   width: 100%;
-  height: 14.1rem;
+  min-height: 14.1rem;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 .listMap__text {
   width: 100%;
-  height: 14.6rem;
+  min-height: 14.6rem;
   padding: 2rem;
 }
 .listMap__text h2 {
