--- a/src/styles/components/Main.css
+++ b/src/styles/components/Main.css
@@ -4,3 +4,53 @@
   grid-gap: 2rem;
   grid-template-columns: repeat(4, 1fr);
 }
+.container__sectionSearch {
+  display: flex;
+  position: relative;
+  grid-column: span 4;
+}
+.sectionSearch__icon {
+  width: 15px;
+  height: 15px;
+  display: block;
+  position: absolute;
+  left: 2.5rem;
+  top: calc(50% - 7.5px);
+  background-image: url('../../assets/icons/search.svg');
+}
+.sectionSearch__text {
+  width: 100%;
+  color: #fff;
+  padding: 1.5rem;
+  padding-left: 7rem;
+  border: none;
+  border-radius: 0.4rem;
+  background-color: #2b3743;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+}
+.sectionSearch__text::placeholder {
+  color: #fff;
+}
+.container__selection {
+  display: flex;
+  grid-column: span 3;
+}
+.selectFilter {
+  width: 100%;
+  height: 4rem;
+  padding: 7px;
+  color: #fff;
+  border: none;
+  border-radius: 0.4rem;
+  background-color: #2b3743;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+}
+.selectFilter option {
+  white-space: 2rem;
+  appearance: none;
+  padding: 1.5rem;
+}
+.container__list {
+  grid-column: span 4;
+  justify-self: center;
+}
