--- a/src/styles/components/Details.css
+++ b/src/styles/components/Details.css
@@ -1,5 +1,6 @@
 .container__main {
   padding: 15px;
+  padding-bottom: 0;
   margin-top: 1.5rem;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -33,4 +34,7 @@
 .main__country {
   grid-column: span 4;
   font-size: 2.8rem;
+}
+.Maincontain__text {
+  grid-column: span 4;
 }
